tests/invalid/generic_object_constructor_missing_arguments.wio
object Box<T> {
    public value: T;

    OnConstruct(value: T) {
        self.value = value;
    }
}

fn Entry() -> i32 {
    let box = Box(7);
    return 0;
}
